<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AcountInfo">

    <ImageView
        android:id="@+id/man"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/man"
        android:contentDescription="@string/man" />

    <LinearLayout
        android:id="@+id/lay_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/man"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="sqlResult" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="sqlResult" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/acc_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/acc_balance"
            android:textColor="@color/orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="sqlResult" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_balance"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/card_style"
            android:gravity="center"
            android:onClick="sendTransactions"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:textSize="25sp"
                tools:text="5" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/card_style"
            android:gravity="center"
            android:onClick="receiveTransactions"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/receive"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:textSize="25sp"
                tools:text="5" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_balance"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/orange_button"
        android:onClick="enterAmount"
        android:text="@string/transfer_money"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>